external-services/k8s/services-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: park-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: park-service
  template:
    metadata:
      labels:
        app: park-service
    spec:
      containers:
      - name: park-service
        image: kasd0134/msa-parkservice:latest
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: kasd0134/msa-userservice:latest
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facility-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facility-service
  template:
    metadata:
      labels:
        app: facility-service
    spec:
      containers:
      - name: facility-service
        image: kasd0134/msa-facility-service:latest
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-service
  template:
    metadata:
      labels:
        app: ticket-service
    spec:
      containers:
      - name: ticket-service
        image: kasd0134/msa-ticket-service:latest
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inpark-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inpark-service
  template:
    metadata:
      labels:
        app: inpark-service
    spec:
      containers:
      - name: inpark-service
        image: kasd0134/msa-inpark-service:latest
        ports:
        - containerPort: 8000
