external-services/k8s/ride-reservation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ride-reservation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ride-reservation-service
  template:
    metadata:
      labels:
        app: ride-reservation-service
    spec:
      containers:
      - name: ride-reservation-service
        image: kasd0134/ridereservationservice:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ride-reservation-service
spec:
  selector:
    app: ride-reservation-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
