external-services/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-services
spec:
  selector:
    app: external-services
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
