external-services/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: theme-park-ingress
  annotations:
    kubernetes.io/ingress.class: traefik    # Traefik을 사용하기 위한 애노테이션
    traefik.ingress.kubernetes.io/rule-type: "PathPrefix"
    traefik.ingress.kubernetes.io/rewrite-target: "/$2"   # URL rewrite 설정
spec:
  rules:
  - http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port: 
              number: 8000
      - path: /parks
        pathType: Prefix
        backend:
          service:
            name: park-service
            port: 
              number: 8000
      - path: /facilities
        pathType: Prefix
        backend:
          service:
            name: facility-service
            port: 
              number: 8000
      - path: /tickets
        pathType: Prefix
        backend:
          service:
            name: ticket-service
            port: 
              number: 8000
